--- a/style.css
+++ b/style.css
@@ -50,3 +50,61 @@ a{
     text-align: center;
     padding-top: 70px;
   }
+  .donate-title{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+  }
+  .donate-subtitle{
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: -40px;
+  }
+  .amount{
+    text-align: center;
+  }
+  .amount-box{
+    height: 100px;
+    width: 130px;
+    background-color: rgb(243, 243, 243);
+    text-align: center;
+    padding: 30px 0 0 0;
+    margin: 0;
+    display: inline-block;
+    border-radius: 5px;
+  }
+  .amount-box-select{
+    height: 100px;
+    width: 130px;
+    background-color: rgb(235, 207, 203);
+    text-align: center;
+    padding: 30px 0 0 0;
+    margin: 0;
+    display: inline-block;
+    border: 3px solid tomato;
+    border-radius: 5px;
+  }
+  h2 span{
+    color: tomato;
+  }
+  .amount-form{
+    width: 650px;
+    padding: 20px;
+    margin: 50px;
+    outline: 0;
+    border-width: 0 0 2px;
+  }
+  input[type="text"]::placeholder {
+    text-align: center;
+    font-size: 20px;
+    font-family: 'Poppins', sans-serif;
+} 
+.other-amount{
+    text-align: center;
+}
+.other-button{
+    text-align: center;
+    margin-top: -20px;
+    margin-bottom: 10px;
+}
