--- a/style.css
+++ b/style.css
@@ -108,3 +108,48 @@ a{
     margin-top: -20px;
     margin-bottom: 10px;
 }
+.box-donate{
+    display: flex;
+    justify-content: center;
+}
+.plan-title{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+}
+.plan-subtitle{
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: -40px;
+}
+.plan-box-1{
+    height: 350px;
+    width: 350px;
+    background-color: rgb(233, 248, 248);
+    border-radius: 10px;
+    margin: 10px;
+}
+.plan-box-2{
+    height: 350px;
+    width: 350px;
+    background-color: rgb(248, 229, 229);
+    border-radius: 10px;
+    margin: 10px;
+}
+.plan-box-3{
+    height: 350px;
+    width: 350px;
+    background-color: rgb(248, 242, 233);
+    border-radius: 10px;
+    margin: 10px;
+}
+.plan-icon{
+    padding: 30px 0 0 15px;
+}
+.box-title{
+    padding: 15px 0 10px 15px;
+}
+.box-content{
+    padding: 0 0 0 15px;
+}
