--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ a{
     font-weight: 400;
     border-radius: 10px;
 }
+
+
+/*Home Section Start*/
 .home-container{
     background-image: url(images/donation4.jpg);
     background-repeat: no-repeat;
@@ -27,44 +30,48 @@ a{
     width: 100%;
     height: 100%;
     position: relative;
-  }
-  .home-title{
+}
+.home-title{
     color: white;
     font-size: 40px;
     font-weight: 700;
     text-align: center;
     margin: 0;
     padding-top: 50px;
-  }
-  h1 span{
+}
+h1 span{
     color: tomato;
-  }
-  .home-content{
+}
+.home-content{
     color: white;
     font-size: 20px;
     font-weight: 400;
     text-align: center;
     padding: 1px;
-  }
-  .home-button{
+}
+.home-button{
     text-align: center;
     padding-top: 70px;
-  }
-  .donate-title{
+}
+/*Home Section End*/
+
+
+/*Donate Section Start*/
+.donate-title{
     font-size: 40px;
     font-weight: 700;
     text-align: center;
-  }
-  .donate-subtitle{
+}
+.donate-subtitle{
     font-size: 20px;
     font-weight: 400;
     text-align: center;
     margin-top: -40px;
-  }
-  .amount{
+}
+.amount{
     text-align: center;
-  }
-  .amount-box{
+}
+.amount-box{
     height: 100px;
     width: 130px;
     background-color: rgb(243, 243, 243);
@@ -73,8 +80,8 @@ a{
     margin: 0;
     display: inline-block;
     border-radius: 5px;
-  }
-  .amount-box-select{
+}
+.amount-box-select{
     height: 100px;
     width: 130px;
     background-color: rgb(235, 207, 203);
@@ -84,18 +91,18 @@ a{
     display: inline-block;
     border: 3px solid tomato;
     border-radius: 5px;
-  }
-  h2 span{
+}
+h2 span{
     color: tomato;
-  }
-  .amount-form{
+}
+.amount-form{
     width: 650px;
     padding: 20px;
     margin: 50px;
     outline: 0;
     border-width: 0 0 2px;
-  }
-  input[type="text"]::placeholder {
+}
+input[type="text"]::placeholder {
     text-align: center;
     font-size: 20px;
     font-family: 'Poppins', sans-serif;
@@ -108,6 +115,10 @@ a{
     margin-top: -20px;
     margin-bottom: 10px;
 }
+/*Donate Section End*/
+
+
+/*Donate Plan Section Start*/
 .box-donate{
     display: flex;
     justify-content: center;
@@ -152,4 +163,121 @@ a{
 }
 .box-content{
     padding: 0 0 0 15px;
+}
+/*Donate Plan Section End*/
+
+
+/*Mobile Banking Section Start*/
+.mobile-title{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+}
+.mobile-subtitle{
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: -40px;
+}
+.mobile-container-1{
+    height: 300px;
+    width: 300px;
+    background-color: rgb(248, 229, 229);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px rgb(243, 241, 241) ;
+    margin: 20px;
+}
+.mobile-container-2{
+    height: 300px;
+    width: 300px;
+    background-color: rgb(248, 242, 233);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px rgb(243, 241, 241) ;
+    margin: 20px;
+}
+.mobile-container-3{
+    height: 300px;
+    width: 300px;
+    background-color: rgb(233, 248, 248);
+    border-radius: 10px;
+    box-shadow: 5px 5px 5px 5px rgb(243, 241, 241) ;
+    margin: 20px;
+}
+.mobile-banking-box{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.banking-icon{
+    height: 100px;
+    width: 100px;
+    margin: 10px;
+}
+.banking-logo{
+    text-align: center;
+    padding: 25px 0 0 0;
+}
+.banking-name{
+    text-align: center;
+}
+.banking-details{
+    text-align: center;
+    font-size: 20px;
+}
+/*Mobile Banking Section End*/
+
+
+/*Update Section Start*/
+.update-title{
+    font-size: 40px;
+    font-weight: 700;
+    text-align: center;
+}
+.update-subtitle{
+    font-size: 20px;
+    font-weight: 400;
+    text-align: center;
+    margin-top: -40px;
+}
+.email-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+}
+.update-box{
+    background-color: rgb(245, 231, 209);
+    width: 700px;
+    height: 200px;
+    margin: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.update-emailarea{
+    width: 260px;
+    padding: 10px 20px;
+}
+input[type="email"]::placeholder{
+    font-family: 'Poppins', sans-serif;
+    font-size: 15px;
+}
+/*Update Section End*/
+
+
+footer{
+    height: 100px;
+    background-color: black;
+}
+footer h1{
+    color: white;
+    font-size: 25px;
+    text-align: center;
+    padding: 10px;
+}
+footer p{
+    color: white;
+    font-size: 18px;
+    text-align: center;
+    margin-top: -15px;
 }
